# climate-toolkit

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  demo_issue_69.sh  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-cd.yml
analysis/: __init__.py  build_ggcmi_phase3_asset.py  build_gsod_window_coverage_index.py  climate_statistics_source_matrix.md  issue_fixed_dates_vs_crop_calendar_presets.md  issue_season_detection_review_triggers.md  issue_season_morphology_transitional_regimes.md  nasa_power_zarr_benchmark_results_api_temporal.json  nasa_power_zarr_benchmark_results_api_temporal_sites10.json  nasa_power_zarr_benchmark_results_spatial_short10.json  nasa_power_zarr_benchmark_summary_api_temporal.csv  nasa_power_zarr_benchmark_summary_api_temporal_sites10.csv  nasa_power_zarr_benchmark_summary_spatial_short10.csv  nasa_power_zarr_sample_compare_api_temporal.json  nasa_power_zarr_sample_compare_api_temporal_sites10.json  nasa_power_zarr_sample_compare_spatial_short10.json  ndws_methods_review.md  nex_ensemble_poc_manifest.csv  nex_ensemble_poc_summary.csv  nex_gddp_access_rnd.md  nex_gddp_many_points_benchmark.md  nex_many_points_historical_1991_01_summary.csv  nex_many_points_historical_1991_2000_auto_summary.csv  nex_many_points_historical_1991_full_chunk365_summary.csv  nex_many_points_ssp245_2050_01_summary.csv  nex_parallel_optimization_curated_summary.csv  nex_parallel_optimization_findings.md  nex_regional_fast_pool_memo_andes.md  nex_regional_fast_pool_memo_eaf.md  nex_regional_fast_pool_memo_waf.md  nex_sanity_matrix.json  nex_sanity_matrix.md  nex_subset_historical_1985_2014_manifest.csv  nex_subset_historical_1985_2014_summary.csv  nex_subset_historical_1991_manifest.csv  nex_subset_historical_1991_summary.csv  nex_subset_sites10_historical_1985_2014_manifest.csv  nex_subset_sites10_historical_1985_2014_summary.csv  nex_subset_sites10_ssp245_2041_2070_manifest.csv  nex_subset_sites10_ssp245_2041_2070_summary.csv  (+25 more)
analysis/issues/: issue_29_tai_method_note.md  issue_30_thi_method_note.md  issue_30_thi_threshold_review.md  issue_34_typer_prototype_note.md  issue_74_fix_comment.md  issue_79_spei_followup_note.md  issue_85_branch_fix_summary.md  issue_85_compare_datasets_comment.md  issue_86_correction_comment.md  issue_86_fix_comment.md  issue_87_fix_comment.md  issue_88_fix_comment.md  issue_89_fix_comment.md  issue_90_fix_comment.md  issue_91_fix_comment.md  issue_93_fix_comment.md  issue_94_real_backend_update.md  issue_agera5_dead_stub.md  issue_auto_mode_mixed_season_slots.md  issue_auto_mode_mixed_season_slots_post.md  issue_compare_periods_baseline_historical.md  issue_degraded_preprocess_import.md  issue_ensemble_hazards_import.md  issue_ensemble_hazards_scenario_mixing.md  issue_ensemble_runtime_profiling.md  issue_ensemble_statistics_baseline_label.md  issue_era5_runtime_mismatch.md  issue_gee_cache_performance_expectations.md  issue_human_heat_propagation.md  issue_human_heat_stress_planning.md  issue_main_ssp370_mismatch.md  issue_mswep_accessibility_note.md  issue_nasa_power_zarr_followup.md  issue_ndws_methodology_followup.md  issue_nex_gddp_1_2_followup.md  issue_nex_location_invariant.md  issue_nex_parallel_optimization_findings.md  issue_nex_regional_pool_evidence_matrix.md  issue_paired_source_support_statistics_seasons.md  issue_precompute_noaa_station_coverage_index.md  (+9 more)
apis/: catalog.py  dependencies.py  main.py
apis/routes/: climatology.py  compare.py  data.py  hazards.py  statistics.py
apis/templates/: _ensemble_controls.html  _ensemble_result.html  climatology.html  compare_datasets.html  compare_periods.html  fetch_data.html  hazards.html  seasons.html  statistics.html
assets/: package_architecture_overview.mmd
climate_tookit/: __init__.py  __main__.py  _resources.py  cli.py  gee_check.py
climate_tookit/calculate_hazards/: __init__.py  crop_water_balance_params.json  ensemble_hazards.py  hazards.py
climate_tookit/climate_statistics/: __init__.py  ensemble_statistics.py  statistics.py
climate_tookit/climatology/: __init__.py  _cli_common.py  heat_stress.py  human_heat_stress.py  long_term_climatology.py  spei.py  vpd.py  xclim_reference.py
climate_tookit/compare_datasets/: __init__.py  compare_datasets.py
climate_tookit/compare_periods/: __init__.py  ensemble_periods.py  periods.py
climate_tookit/crop_calendar/: __init__.py  ggcmi.py  registry.py
climate_tookit/data/: __init__.py
climate_tookit/fetch_data/: __init__.py  cache_inventory.py  fetch_data.py  gee_xee_batch.py  multi_site.py  nex_gddp_batch.py  runtime_notes.py
climate_tookit/season_analysis/: __init__.py  ensemble.py  season_identity.py  seasons.py
docs/: distribution_workflow.md  example_workflow.md  human_heat_workflow.md  thi_workflow.md  weather_station_workflows.md
tests/: test_auto_season_alignment_report.py  test_cache_inventory.py  test_cli_dispatch.py  test_climatology_output.py  test_climatology_typer_cli.py  test_compare_datasets_source_policy.py  test_compare_periods_baseline.py  test_crop_registry_hazards.py  test_distribution_artifacts.py  test_ensemble_hazards_aggregation.py  test_ensemble_hazards_import.py  test_ensemble_statistics_scenario_validation.py  test_fetch_model_resolution.py  test_fetch_pipeline.py  test_gee_check.py  test_gee_xee_batch.py  test_ggcmi_crop_calendar.py  test_ghcn_daily_station.py  test_hazard_thresholds.py  test_historical_workers_surface.py  test_human_heat_stress.py  test_install_shape.py  test_lazy_package_roots.py  test_multi_site_contract.py  test_nasa_power_cache.py  test_nex_gddp_batch.py  test_nex_gddp_behavior.py  test_nex_gddp_xee_poc.py  test_package_import_hygiene.py  test_package_resources.py  test_packaging_metadata.py  test_preprocess_imports.py  test_season_analysis_ensemble_fixed.py  test_season_identity.py  test_seasons_nex_gddp.py  test_soil_grid_cache.py  test_spei.py  test_spei_cli.py  test_statistics_source_policy.py  test_tamsat_logging.py  (+4 more)
(+41 files in other folders)
