[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climate-tookit"
version = "0.0.0"
description = "Climate toolkit"
requires-python = ">=3.10"
dependencies = [
  "earthengine_api==1.6.12",
  "pandas==2.3.1",
  "pydantic==2.11.7",
  "python-dotenv==1.1.1",
  "PyYAML==6.0.2",
  "Requests==2.32.4",
  "tabulate==0.9.0",
  "xarray==2025.6.1",
  "xclim==0.61.1",
  "xee==0.1.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["climate_tookit*", "analysis*"]

[tool.setuptools.package-data]
climate_tookit = [
  "calculate_hazards/*.json",
  "data/ggcmi_phase3/*.json",
  "data/ggcmi_phase3/*.parquet",
  "fetch_data/source_data/sources/utils/*.yaml",
  "fetch_data/transform_data/*.yaml",
]
