[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climate-tookit"
version = "0.1.0a0"
description = "Climate toolkit for location-based climate, season, climatology, hazard, and projection analysis."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = [
  "climate",
  "agriculture",
  "hazards",
  "seasonality",
  "nex-gddp",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
  "earthengine_api==1.6.12",
  "matplotlib==3.10.5",
  "pandas==2.3.1",
  "pydantic==2.11.7",
  "python-dotenv==1.1.1",
  "PyYAML==6.0.2",
  "Requests==2.32.4",
  "tabulate==0.9.0",
  "typer==0.26.7",
  "xarray==2025.6.1",
  "xclim==0.61.1",
  "xee==0.1.0",
]

[project.optional-dependencies]
# HTTP service layer (apis/). Optional so the base CLI/library stays lean:
#   uv sync --extra api    /    pip install -e ".[api]"
api = [
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
  "build",
  "pytest",
  "ruff",
  "setuptools>=68",
  "twine",
  "wheel",
]

[project.urls]
Repository = "https://github.com/CGIAR-Climate-Data-Hub/climate-toolkit"
Issues = "https://github.com/CGIAR-Climate-Data-Hub/climate-toolkit/issues"

[project.scripts]
# Unified entry point: `climate-toolkit <command>` dispatches to the tools
# below. The individual `climate-toolkit-<command>` scripts are kept as
# backward-compatible aliases.
climate-toolkit = "climate_tookit.cli:main"
climate-toolkit-fetch = "climate_tookit.fetch_data.fetch_data:main"
climate-toolkit-gee-check = "climate_tookit.gee_check:main"
climate-toolkit-seasons = "climate_tookit.season_analysis.seasons:main"
climate-toolkit-seasons-ensemble = "climate_tookit.season_analysis.ensemble:main"
climate-toolkit-stats = "climate_tookit.climate_statistics.statistics:main"
climate-toolkit-stats-ensemble = "climate_tookit.climate_statistics.ensemble_statistics:main"
climate-toolkit-periods = "climate_tookit.compare_periods.periods:main"
climate-toolkit-periods-ensemble = "climate_tookit.compare_periods.ensemble_periods:main"
climate-toolkit-hazards = "climate_tookit.calculate_hazards.hazards:main"
climate-toolkit-hazards-ensemble = "climate_tookit.calculate_hazards.ensemble_hazards:main"
climate-toolkit-weather-station-download = "climate_tookit.weather_station.download:main"
climate-toolkit-weather-station-compare = "climate_tookit.weather_station.compare:main"
climate-toolkit-compare-datasets = "climate_tookit.compare_datasets.compare_datasets:main"
climate-toolkit-climatology = "climate_tookit.climatology.long_term_climatology:main"
climate-toolkit-spei = "climate_tookit.climatology.spei:main"
climate-toolkit-xclim-reference = "climate_tookit.climatology.xclim_reference:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["climate_tookit*", "analysis*"]

[tool.setuptools.package-data]
climate_tookit = [
  "calculate_hazards/*.json",
  "data/ggcmi_phase3/*.json",
  "data/ggcmi_phase3/*.parquet",
  "fetch_data/source_data/sources/utils/*.yaml",
  "fetch_data/transform_data/*.yaml",
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
  "build",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E402", "E701", "E702", "F401", "F541"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
